# ffmpeg1

./: KIKAKUSHO.md  README.md  TODO.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/try_ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeLib.cpp  NativeLib.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/example/try_ffmpeg/: CreateActivity.kt  FFmpegBridge.kt  LibraryActivity.kt  MainActivity.kt  ViewHistoryActivity.kt
app/src/main/res/drawable/: archive.xml  create.xml  view_history.xml
app/src/main/res/layout/: activity_create.xml  activity_main.xml
app/src/main/res/menu/: buttom_nav_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/try_ffmpeg/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
